--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,6 @@
 version: 0.2
 run-as: root
 phases:
-  pre_build:
+  build:
     commands:
-      - ls
+      - GOOS=linux GOARCH=amd64 go build -o cmd/main forgesense/main.go
